[package]
name = "gurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0"
rustls = { version = "0", features = [ "dangerous_configuration" ] }
tokio = { version = "1", features = [ "full" ] }
url = "2"
