[package]
name = "gurl"
version = "0.1.2"
edition = "2021"
description = "download gemini pages"
license-file = "LICENSE.md"
repository = "https://github.com/joleeee/gurl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0"
mio = "0"
rustls = { version = "0", features = [ "dangerous_configuration" ] }
tokio = { version = "1", features = [ "full" ] }
url = "2"
